--- a/test/pipelines/pipelines-it-remote-windows.yml
+++ b/test/pipelines/pipelines-it-remote-windows.yml
@@ -36,7 +36,7 @@ jobs:
       (New-Object Net.WebClient).DownloadFile("https://the.earth.li/~sgtatham/putty/latest/w64/pscp.exe", "$(Agent.TempDirectory)\pscp.exe")
       Write-Host "Download Putty success!"
       Write-Host "Connecting to host..."
-      $(Agent.TempDirectory)\pscp.exe -P $(remote_port) -hostkey $(hostkey) -pw $(pscp_pwd) $(remote_user)@$(remote_host):/tmp/nnitest/$(Build.BuildId)/port test\port
+            $(Agent.TempDirectory)\pscp.exe -P $(remote_port) -hostkey $(hostkey) -pw $(pscp_pwd) $(remote_user)@$(remote_host):/tmp/nnitest/$(Build.BuildId)/port test\port
       Write-Host "Get port success!"
       Get-Content test\port
     displayName: 'Get docker port'
@@ -56,5 +56,5 @@ jobs:
     inputs:
       sshEndpoint: $(end_point)
       runOptions: commands
-      commands: rm -rf /tmp/nnitest/$(Build.BuildId)
+      commands: whoami
     displayName: 'Clean the remote files'  
