--- a/test/pipelines/pipelines-it-pai-windows.yml
+++ b/test/pipelines/pipelines-it-pai-windows.yml
@@ -63,6 +63,7 @@ jobs:
       cd test
       set PATH=$(ENV_PATH)
       python --version
-      python nni_test/nnitest/generate_ts_config.py --ts pai --pai_host $(pai_host) --pai_user $(pai_user) --pai_pwd $(pai_pwd) --vc $(pai_virtual_cluster) --nni_docker_image $(docker_image) --data_dir $(data_dir) --output_dir $(output_dir) --nni_manager_ip $(nni_manager_ip)
+      mount -o anon $(pai_nfs_uri) $(local_nfs_uri)
+      python nni_test/nnitest/generate_ts_config.py --ts pai --pai_token $(pai_token) --pai_host $(pai_host) --pai_user $(pai_user) --nni_docker_image $(docker_image) --pai_storage_plugin $(pai_storage_plugin) --nni_manager_nfs_mount_path $(nni_manager_nfs_mount_path) --container_nfs_mount_path $(container_nfs_mount_path) --nni_manager_ip $(nni_manager_ip)
       python nni_test/nnitest/run_tests.py --config config/integration_tests.yml --ts pai --exclude multi-phase
     displayName: 'Examples and advanced features tests on pai'
