--- a/src/nni_manager/.eslintrc
+++ b/src/nni_manager/.eslintrc
@@ -23,7 +23,8 @@
         "@typescript-eslint/consistent-type-assertions": 0,
         "@typescript-eslint/no-inferrable-types": 0,
         "no-inner-declarations": 0,
-        "@typescript-eslint/no-var-requires": 0
+        "@typescript-eslint/no-var-requires": 0,
+        "no-constant-condition": ["error", {"checkLoops": false}]
     },
     "ignorePatterns": [
         "node_modules/",
