--- a/test/pipelines/pipelines-it-frameworkcontroller.yml
+++ b/test/pipelines/pipelines-it-frameworkcontroller.yml
@@ -35,7 +35,7 @@ jobs:
 
         echo 'updating docker file for installing nni from local...'
         # update Dockerfile to install NNI in docker image from whl file built in last step
-        sed -ie 's/RUN python3 -m pip --no-cache-dir install nni/COPY .\/dist\/* ./\nRUN python3 -m pip install nni-*.whl/' ../docker/Dockerfile
+        sed -ie 's/RUN python3 -m pip --no-cache-dir install nni/COPY .\/dist\/* .\/\nRUN python3 -m pip install nni-*.whl/' ../docker/Dockerfile
         cat ../docker/Dockerfile
         export IMG_TAG=`date -u +%y%m%d%H%M`
         docker build -f ../docker/Dockerfile -t $(test_docker_img_name):$IMG_TAG .
