fix docker building

--- a/test/pipelines/pipelines-it-frameworkcontroller.yml
+++ b/test/pipelines/pipelines-it-frameworkcontroller.yml
@@ -28,6 +28,7 @@ jobs:
     displayName: 'Install dependencies for integration tests in frameworkcontroller mode'
 
   - script: |
+      set -e
       if [ $(build_docker_img) = 'true' ]
       then
         cd deployment/pypi
