fix Python path bug #1578 fix gpu_metrics_collector to support pyenv fix NASUI failure on dev-install-node-modules add .gitignore links for dev-install

--- a/src/nni_manager/package.json
+++ b/src/nni_manager/package.json
@@ -6,6 +6,7 @@
     "build": "tsc",
     "test": "nyc mocha -r ts-node/register -t 15000 --recursive **/*.test.ts --exclude node_modules/**/**/*.test.ts --colors",
     "start": "node dist/main.js",
+    "watch": "tsc --watch",
     "eslint": "npx eslint ./ --ext .ts"
   },
   "license": "MIT",
