--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,8 @@ venv.bak/
 
 # In case you place source code in ~/nni/
 /experiments
+src/sdk/pynni/nni/nni
+tools/nni_annotation/nni_annotation
+tools/nni_cmd/nni_cmd
+tools/nni_gpu_tool/nni_gpu_tool
+tools/nni_trial_tool/nni_trial_tool
