--- a/deployment/docker/Dockerfile
+++ b/deployment/docker/Dockerfile
@@ -14,6 +14,7 @@ RUN DEBIAN_FRONTEND=noninteractive && \
     vim \
     unzip \
     wget \
+    make \
     build-essential \
     cmake \
     libopenblas-dev \
@@ -67,7 +68,8 @@ RUN python3 -m pip --no-cache-dir install pandas==0.23.4 lightgbm==2.2.2
 #
 # Install NNI
 #
-RUN python3 -m pip --no-cache-dir install nni
+RUN git clone -b sapruner https://github.com/suiguoxin/nni/ && cd nni && chmod +x ./install.sh && ./install.sh
+# RUN python3 -m pip --no-cache-dir install nni
 
 ENV PATH=/usr/local/nvidia/bin:/usr/local/cuda/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/root/.local/bin:/usr/bin:/bin:/sbin
 
