--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,8 +26,7 @@ jobs:
       yarn eslint
     displayName: 'Run eslint'
   - script: |
-      python3 -m pip install torch==1.3.1 --user
-      python3 -m pip install torchvision==0.4.2 --user
+      python3 -m pip install torchvision==0.6.0 torch==1.5.0 --user
       python3 -m pip install tensorflow==1.15.2 --user
       python3 -m pip install keras==2.1.6 --user
       python3 -m pip install gym onnx --user
@@ -62,6 +61,52 @@ jobs:
       cd docs/en_US/
       sphinx-build -M html . _build -W
     displayName: 'Sphinx Documentation Build check'
+
+- job: 'basic_test_pr_ubuntu_legacy_torch'
+  pool:
+    vmImage: 'Ubuntu 16.04'
+  strategy:
+    matrix:
+      Python36:
+        PYTHON_VERSION: '3.6'
+
+  steps:
+  - script: |
+      python3 -m pip install --upgrade pip setuptools --user
+      python3 -m pip install pylint==2.3.1 astroid==2.2.5 --user
+      python3 -m pip install coverage --user
+      echo "##vso[task.setvariable variable=PATH]${HOME}/.local/bin:${PATH}"
+    displayName: 'Install python tools'
+  - script: |
+      source install.sh
+    displayName: 'Install nni toolkit via source code'
+  - script: |
+      set -e
+      cd src/nni_manager
+      yarn eslint
+      # uncomment following 2 lines to enable webui eslint
+      cd ../webui
+      yarn eslint
+    displayName: 'Run eslint'
+  - script: |
+      python3 -m pip install torchvision==0.4.2 torch==1.3.1 --user
+      python3 -m pip install tensorflow==1.15.2 --user
+      python3 -m pip install keras==2.1.6 --user
+      python3 -m pip install gym onnx --user
+      python3 -m pip install sphinx==1.8.3 sphinx-argparse==0.2.5 sphinx-markdown-tables==0.0.9 sphinx-rtd-theme==0.4.2 sphinxcontrib-websupport==1.1.0 recommonmark==0.5.0 --user
+      sudo apt-get install swig -y
+      nnictl package install --name=SMAC
+      nnictl package install --name=BOHB
+    displayName: 'Install dependencies'
+  - script: |
+      cd test
+      source scripts/unittest.sh
+    displayName: 'Unit test'
+  - script: |
+      cd test
+      python3 nni_test/nnitest/run_tests.py --config config/pr_tests.yml
+    displayName: 'Simple test'
+
 
 - job: 'basic_test_pr_macOS'
   pool:
