--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -114,8 +114,7 @@ jobs:
       echo "##vso[task.setvariable variable=PATH]${HOME}/Library/Python/3.7/bin:${PATH}"
     displayName: 'Install nni toolkit via source code'
   - script: |
-      python3 -m pip install torch==1.3.1 --user
-      python3 -m pip install torchvision==0.4.2 --user
+      python3 -m pip install torchvision==0.6.0 torch==1.5.0 --user
       python3 -m pip install tensorflow==1.15.2 --user
       brew install swig@3
       rm /usr/local/bin/swig
@@ -146,8 +145,7 @@ jobs:
   - script: |
       python -m pip install scikit-learn==0.20.0 --user
       python -m pip install keras==2.1.6 --user
-      python -m pip install torch===1.3.1 torchvision===0.4.2 -f https://download.pytorch.org/whl/torch_stable.html --user
-      python -m pip install torchvision --user
+      python -m pip install torchvision==0.6.0 torch==1.5.0 -f https://download.pytorch.org/whl/torch_stable.html --user
       python -m pip install tensorflow==1.15.2 --user
     displayName: 'Install dependencies'
   - script: |
