--- a/test/config/integration_tests.yml
+++ b/test/config/integration_tests.yml
@@ -85,6 +85,14 @@ testCases:
   validator:
     class: ExportValidator 
 
+- name: export-zero-trial
+  configFile: test/config/metrics_test/config_failure.yml
+  config:
+    maxTrialNum: 1
+    trialConcurrency: 1
+  validator:
+    class: ExportValidator
+
 - name: metrics-dict
   configFile: test/config/metrics_test/config_dict_metrics.yml
   config:
