--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,10 @@
+# Azure hosted agents specification:
+# https://docs.microsoft.com/en-us/azure/devops/pipelines/agents/hosted?view=azure-devops
+
 jobs:
-- job: 'basic_test_pr_ubuntu'
+- job: 'ubuntu_1804_python36'
   pool:
     vmImage: 'Ubuntu 18.04'
-  strategy:
-    matrix:
-      Python36:
-        PYTHON_VERSION: '3.6'
 
   steps:
   - script: |
@@ -62,13 +61,9 @@ jobs:
       sphinx-build -M html . _build -W
     displayName: 'Sphinx Documentation Build check'
 
-- job: 'basic_test_pr_ubuntu_legacy_torch'
+- job: 'ubuntu_1604_python35_legacy_torch'
   pool:
     vmImage: 'Ubuntu 16.04'
-  strategy:
-    matrix:
-      Python36:
-        PYTHON_VERSION: '3.6'
 
   steps:
   - script: |
@@ -98,13 +93,9 @@ jobs:
     displayName: 'Simple test'
 
 
-- job: 'basic_test_pr_macOS'
+- job: 'macos_1015_python37'
   pool:
     vmImage: 'macOS-10.15'
-  strategy:
-    matrix:
-      Python36:
-        PYTHON_VERSION: '3.6'
 
   steps:
   - script: python3 -m pip install --upgrade pip setuptools
@@ -131,13 +122,9 @@ jobs:
       python3 nni_test/nnitest/run_tests.py --config config/pr_tests.yml
     displayName: 'Simple test'
 
-- job: 'basic_test_pr_Windows'
+- job: 'win2016_python37'
   pool:
     vmImage: 'vs2017-win2016'
-  strategy:
-    matrix:
-      Python36:
-        PYTHON_VERSION: '3.6'
 
   steps:
   - script: |
