--- a/test/config/integration_tests.yml
+++ b/test/config/integration_tests.yml
@@ -1,6 +1,6 @@
 
 defaultTestCaseConfig:
-  launchCommand: nnictl create --config $configFile
+  launchCommand: nnictl create --config $configFile --debug
   stopCommand: nnictl stop
   experimentStatusCheck: True
   platform: linux darwin win32
@@ -22,7 +22,7 @@ testCases:
   validator:
 
   # launch command, default launch command is 'nnictl create --config $configFile'
-  launchCommand: nnictl create --config $configFile
+  launchCommand: nnictl create --config $configFile --debug
 
   # stop command, default stop command is 'nnictl stop', empty means no stop command
   stopCommand: nnictl stop
