--- a/test/pipelines/pipelines-it-remote-linux-to-windows.yml
+++ b/test/pipelines/pipelines-it-remote-linux-to-windows.yml
@@ -6,7 +6,9 @@ jobs:
       - task: CopyFilesOverSSH@0
         inputs:
           sshEndpoint: $(end_point)
-          contents: '** \n !.git \n !docs'
+          contents: |
+            '**'
+            '!(.git|docs)'
           targetFolder: /tmp/nnitest/$(Build.BuildId)
           overwrite: true
         displayName: "Copy all files to remote machine"
