--- a/test/pipelines/pipelines-it-remote-linux-to-windows.yml
+++ b/test/pipelines/pipelines-it-remote-linux-to-windows.yml
@@ -7,8 +7,8 @@ jobs:
         inputs:
           sshEndpoint: $(end_point)
           contents: |
-            '**'
-            '!(.git|docs)'
+            **
+            !(.git|docs)
           targetFolder: /tmp/nnitest/$(Build.BuildId)
           overwrite: true
         displayName: "Copy all files to remote machine"
