--- a/test/pipelines/pipelines-it-remote-linux-to-windows.yml
+++ b/test/pipelines/pipelines-it-remote-linux-to-windows.yml
@@ -8,7 +8,8 @@ jobs:
           sshEndpoint: $(end_point)
           contents: |
             **
-            !(.git|docs)/**
+            !.git/**
+            !docs/**
           targetFolder: /tmp/nnitest/$(Build.BuildId)
           overwrite: true
         displayName: "Copy all files to remote machine"
@@ -20,8 +21,9 @@ jobs:
           commands: |
             activate l2w
             cd /tmp/nnitest/$(Build.BuildId)
-            powershell.exe -file uninstall.ps1
-            powershell.exe -file install.ps1
+            dir
+            powershell.exe -file ./uninstall.ps1
+            powershell.exe -file ./install.ps1
           failOnStdErr: false
         displayName: "install on remote windows"
       - script: python3 -m pip install --upgrade pip setuptools --user
