add clean up on failure

--- a/test/pipelines/pipelines-it-remote-linux-to-windows.yml
+++ b/test/pipelines/pipelines-it-remote-linux-to-windows.yml
@@ -45,4 +45,5 @@ jobs:
           sshEndpoint: $(end_point)
           runOptions: commands
           commands: rmdir /s /q /tmp/nnitest/$(Build.BuildId)
+        condition: always()
         displayName: "clean up on remote server"
