--- a/test/pipelines/pipelines-it-remote-linux-to-windows.yml
+++ b/test/pipelines/pipelines-it-remote-linux-to-windows.yml
@@ -44,6 +44,6 @@ jobs:
         inputs:
           sshEndpoint: $(end_point)
           runOptions: commands
-          commands: rmdir /s /q /tmp/nnitest/$(Build.BuildId)
+          commands: rmdir /s /q "/tmp/nnitest/$(Build.BuildId)"
         condition: always()
         displayName: "clean up on remote server"
