--- a/examples/model_compress/auto_pruners_torch_pai.yml
+++ b/examples/model_compress/auto_pruners_torch_pai.yml
@@ -24,9 +24,17 @@ taskRoles:
       - mkdir /mnt/nfs-storage
       - 'mount -t nfs 10.151.40.36:/ /mnt/nfs-storage'
       - git clone -b sapruner https://github.com/suiguoxin/nni/
-      - cd nni && python3 examples/model_compress/sa_torch.py --epochs 100 --pruner SimulatedAnnealingPruner --pruning-mode channel --cool-down-rate 0.9 --sparsity 0.1 --dataset cifar10 --fine-tune True --fine-tune-epochs 50 --data-dir /mnt/nfs-storage/users/sgx/cifar10 --experiment-data-dir /mnt/nfs-storage/users/sgx/experiment_data/cifar10/01
-      # - cd nni && python3 examples/model_compress/sa_torch.py --pruner NetAdaptPruner --pruning-mode channel --cool-down-rate 0.9 --sparsity 0.1 --dataset imagenet --fine-tune True --fine-tune-epochs 10 --data-dir /mnt/nfs-storage/users/sgx/imagenet --experiment-data-dir /mnt/nfs-storage/users/sgx/experiment_data/01
-      # - cd nni && python3 examples/model_compress/sa_torch.py --pruner NetAdaptPruner --pruning-mode channel --cool-down-rate 0.3 --sparsity 0.1 --dataset mnist --fine-tune True --fine-tune-epochs 10 --data-dir /mnt/nfs-storage/users/sgx/mnist --experiment-data-dir /mnt/nfs-storage/users/sgx/experiment_data/mnist/01
+      # SimulatedPruner, channel, Cifar10, vgg16
+      - cd nni && python3 examples/model_compress/auto_pruners_torch.py --epochs 100 --pruner SimulatedAnnealingPruner --pruning-mode channel --cool-down-rate 0.9 --sparsity 0.1 --dataset cifar10 --fine-tune True --fine-tune-epochs 50 --data-dir /mnt/nfs-storage/users/sgx/cifar10 --experiment-data-dir /mnt/nfs-storage/users/sgx/experiment_data/cifar10/SimualtedAnnealing/01
+      
+      # NetAdaptPruner, channel, MNIST, LeNet
+      # - cd nni && python3 examples/model_compress/auto_pruners_torch.py --epochs 1 --pruner NetAdaptPruner --pruning-mode channel --pruning-step 0.05 --sparsity 0.1 --dataset mnist --fine-tune True --fine-tune-epochs 10 --data-dir /mnt/nfs-storage/users/sgx/mnist --experiment-data-dir /mnt/nfs-storage/users/sgx/experiment_data/mnist/NetAdapt/01
+      
+      # NetAdaptPruner, channel, Cifar10, vgg16
+      # - cd nni && python3 examples/model_compress/auto_pruners_torch.py --epochs 100 --pruner NetAdaptPruner --pruning-mode channel --pruning-step 0.05 --sparsity 0.1 --dataset imagenet --fine-tune True --fine-tune-epochs 50 --data-dir /mnt/nfs-storage/users/sgx/cifar10 --experiment-data-dir /mnt/nfs-storage/users/sgx/experiment_data/cifar10/NetAdapt/01
+      
+      # NetAdaptPruner, channel, imagenet, MobileNetV2
+      # - cd nni && python3 examples/model_compress/auto_pruners_torch.py --pruner NetAdaptPruner --pruning-mode channel --pruning-step 0.05 --sparsity 0.1 --dataset imagenet --fine-tune True --fine-tune-epochs 10 --data-dir /mnt/nfs-storage/users/sgx/imagenet --experiment-data-dir /mnt/nfs-storage/users/sgx/experiment_data/imagenet/NetAdapt/01
 defaults:
   virtualCluster: default
 extras:
