ignore node_modules to speed up copy.

--- a/test/pipelines/pipelines-it-remote-linux-to-windows.yml
+++ b/test/pipelines/pipelines-it-remote-linux-to-windows.yml
@@ -10,6 +10,7 @@ jobs:
             **
             !.git/**
             !docs/**
+            !**/node_modules/**
           targetFolder: /tmp/nnitest/$(Build.BuildId)
           overwrite: true
         displayName: "Copy all files to remote machine"
