add .git folder back, as it's needed in install.ps1.

--- a/test/pipelines/pipelines-it-remote-linux-to-windows.yml
+++ b/test/pipelines/pipelines-it-remote-linux-to-windows.yml
@@ -8,8 +8,7 @@ jobs:
           sshEndpoint: $(end_point)
           contents: |
             **
-            !.git/**
-            !docs/**
+            !dist/**
             !**/node_modules/**
           targetFolder: /tmp/nnitest/$(Build.BuildId)
           overwrite: true
