--- a/test/pipelines/pipelines-it-remote-linux-to-windows.yml
+++ b/test/pipelines/pipelines-it-remote-linux-to-windows.yml
@@ -1,7 +1,6 @@
 jobs:
-  - job: "integration_test_remote_linux_to_windows"
+  - job: initialCode
     timeoutInMinutes: 120
-
     steps:
       - script: make clean
         displayName: "clean nni source code"
@@ -16,6 +15,10 @@ jobs:
           overwrite: true
         displayName: "Copy all files to remote machine"
         timeoutInMinutes: 10
+  - job: prepareRemote
+    timeoutInMinutes: 120
+    dependsOn: initialCode
+    steps:
       - task: SSH@0
         inputs:
           sshEndpoint: $(end_point)
@@ -23,6 +26,10 @@ jobs:
           commands: cd "\tmp\nnitest\$(Build.BuildId)" && powershell.exe -command "conda activate l2w | .\uninstall.ps1 | .\install.ps1"
           failOnStdErr: false
         displayName: "install on remote windows"
+  - job: prepareLocal
+    timeoutInMinutes: 120
+    dependsOn: initialCode
+    steps:
       - script: python3 -m pip install --upgrade pip setuptools --user
         displayName: "Install python tools"
       - script: make easy-install
@@ -32,6 +39,12 @@ jobs:
           PATH=$HOME/.local/bin:$PATH nnictl package install --name=SMAC
           PATH=$HOME/.local/bin:$PATH nnictl package install --name=BOHB
         displayName: "Install dependencies for integration tests in remote mode"
+  - job: runTest
+    timeoutInMinutes: 120
+    dependsOn:
+    - prepareLocal
+    - prepareRemote
+    steps:
       - script: |
           set -e
           cd test
@@ -40,6 +53,11 @@ jobs:
           cat config/training_service.yml
           PATH=$HOME/.local/bin:$PATH python3 nni_test/nnitest/run_tests.py --config config/integration_tests.yml --ts remote
         displayName: "integration test"
+  - job: cleanUp
+    timeoutInMinutes: 120
+    condition: always()
+    dependsOn: runTest
+    steps:
       - task: SSH@0
         inputs:
           sshEndpoint: $(end_point)
