--- a/test/pipelines/pipelines-it-remote-linux-to-windows.yml
+++ b/test/pipelines/pipelines-it-remote-linux-to-windows.yml
@@ -1,27 +1,9 @@
 jobs:
-  - job: "integration_test_remote_linux_to_windows"
+  - job: "buildMaster"
     timeoutInMinutes: 120
     steps:
       - script: make clean
         displayName: "clean nni source code"
-      - task: CopyFilesOverSSH@0
-        inputs:
-          sshEndpoint: $(end_point)
-          contents: |
-            **
-            !**/dist/**
-            !**/node_modules/**
-          targetFolder: /tmp/nnitest/$(Build.BuildId)
-          overwrite: true
-        displayName: "Copy all files to remote machine"
-        timeoutInMinutes: 10
-      - task: SSH@0
-        inputs:
-          sshEndpoint: $(end_point)
-          runOptions: commands
-          commands: cd "\tmp\nnitest\$(Build.BuildId)" && powershell.exe -command "conda activate l2w | .\uninstall.ps1 | .\install.ps1"
-          failOnStdErr: false
-        displayName: "install on remote windows"
       - script: python3 -m pip install --upgrade pip setuptools --user
         displayName: "Install python tools"
       - script: make easy-install
@@ -31,6 +13,19 @@ jobs:
           PATH=$HOME/.local/bin:$PATH nnictl package install --name=SMAC
           PATH=$HOME/.local/bin:$PATH nnictl package install --name=BOHB
         displayName: "Install dependencies for integration tests in remote mode"
+  - job: "buildWorker"
+    pool:
+      name: NNI CI Windows GPU
+    timeoutInMinutes: 120
+    steps:
+      - script: |
+          conda activate l2w
+          powershell .\uninstall.ps1
+          powershell .\install.ps1
+        displayName: "install"
+  - job: "runTests"
+    timeoutInMinutes: 120
+    steps:
       - script: |
           set -e
           cd test
@@ -39,10 +34,3 @@ jobs:
           cat config/training_service.yml
           PATH=$HOME/.local/bin:$PATH python3 nni_test/nnitest/run_tests.py --config config/integration_tests.yml --ts remote
         displayName: "integration test"
-      - task: SSH@0
-        inputs:
-          sshEndpoint: $(end_point)
-          runOptions: commands
-          commands: rmdir /s /q "\\?\c:\tmp\nnitest\$(Build.BuildId)"
-        condition: always()
-        displayName: "clean up on remote server"
