Update pipelines-it-remote-linux-to-windows.yml for Azure Pipelines

--- a/test/pipelines/pipelines-it-remote-linux-to-windows.yml
+++ b/test/pipelines/pipelines-it-remote-linux-to-windows.yml
@@ -25,6 +25,9 @@ jobs:
         displayName: "install"
   - job: "runTests"
     timeoutInMinutes: 120
+    dependsOn:
+      buildMaster
+      buildWorker
     steps:
       - script: |
           set -e
