Update pipelines-it-remote-linux-to-windows.yml for Azure Pipelines

--- a/test/pipelines/pipelines-it-remote-linux-to-windows.yml
+++ b/test/pipelines/pipelines-it-remote-linux-to-windows.yml
@@ -26,8 +26,8 @@ jobs:
   - job: "runTests"
     timeoutInMinutes: 120
     dependsOn:
-      buildMaster
-      buildWorker
+      - buildMaster
+      - buildWorker
     steps:
       - script: |
           set -e
