--- a/test/config/training_service.yml
+++ b/test/config/training_service.yml
@@ -78,6 +78,7 @@ paiYarn:
 pai:
   nniManagerIp:
   maxExecDuration: 15m
+  # PAI has job submission limitation, set maxTrialNum=1 to control trial job numbers for PAI 
   maxTrialNum: 1
   trialConcurrency: 1
   paiConfig:
@@ -85,7 +86,7 @@ pai:
     userName:
   trainingServicePlatform: pai
   trial:
-    gpuNum: 1
+    gpuNum: 1 
     cpuNum: 1
     image:
     memoryMB: 8192
