Add support for .nniignore (.gitignore)

--- a/src/nni_manager/package.json
+++ b/src/nni_manager/package.json
@@ -11,11 +11,13 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/tar": "^4.0.3",
     "azure-storage": "^2.10.2",
     "chai-as-promised": "^7.1.1",
     "child-process-promise": "^2.2.1",
     "express": "^4.16.3",
     "express-joi-validator": "^2.0.0",
+    "ignore": "^5.1.4",
     "js-base64": "^2.4.9",
     "kubernetes-client": "^6.5.0",
     "rx": "^4.1.0",
@@ -23,6 +25,7 @@
     "ssh2": "^0.6.1",
     "stream-buffers": "^3.0.2",
     "tail-stream": "^0.3.4",
+    "tar": "^6.0.2",
     "tree-kill": "^1.2.0",
     "ts-deferred": "^1.0.4",
     "typescript-ioc": "^1.2.4",
@@ -48,9 +51,9 @@
     "chai": "^4.1.2",
     "eslint": "^6.7.2",
     "glob": "^7.1.3",
-    "mocha": "^7.1.1",
+    "mocha": "^7.1.2",
     "npx": "^10.2.0",
-    "nyc": "^15.0.0",
+    "nyc": "^15.0.1",
     "request": "^2.87.0",
     "rmdir": "^1.2.0",
     "tmp": "^0.0.33",
