--- a/test/config/integration_tests.yml
+++ b/test/config/integration_tests.yml
@@ -67,6 +67,7 @@ testCases:
     trialConcurrency: 1
     trial:
       command: python3 main.py --epochs 1 --batches 1
+      gpuNum: 0
 
 - name: nested-ss
   configFile: test/config/examples/mnist-nested-search-space.yml
