--- a/test/pipelines/pipelines-it-remote-linux-to-windows.yml
+++ b/test/pipelines/pipelines-it-remote-linux-to-windows.yml
@@ -43,7 +43,6 @@ jobs:
         inputs:
           sshEndpoint: $(end_point)
           runOptions: commands
-          commands: |
-            rmdir /s /q "\\?\c:\tmp\nnitest\$(Build.BuildId)"
+          commands: rmdir /s /q "\\?\c:\tmp\nnitest\$(Build.BuildId)"
         condition: always()
         displayName: "clean up on remote server"
